# wsi-to-dicom-converter

./: CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  cloudBuild.sh  cloudbuild.yaml  downloadAndBuild.sh
CMake/: Boost.cmake  Dcmtk.cmake  JsonCpp.cmake  LibJpeg.cmake  OpenJpeg.cmake  OpenSlide.cmake
cloud_build/: cloudbuild.yaml  cpplint.sh  cpplint.yaml  debianBuild.sh  githubRelease.sh  githubRelease.yaml  ubuntuBuild.sh  wsi2dcm.rb
cloud_build/deb/: buildDeb.sh
cloud_build/deb/wsi2dcm/DEBIAN/: control
cloud_build/rpm/: buildRpm.sh
cloud_build/rpm/SPECS/: wsi2dcm.spec
endToEnd/: diff_img.py  endToEndTest.sh  endToEndTest.yaml  strip_pixel_data.py  test10Expected.json  test10ExpectedImage.ppm  test10ExpectedImage.ppm.0.ppm  test10ExpectedImage.ppm.1.ppm  test10ExpectedImage.ppm.2.ppm  test10ExpectedImage.ppm.3.ppm  test11Expected.json  test11ExpectedImage.ppm  test11ExpectedImage.ppm.0.ppm  test11ExpectedImage.ppm.1.ppm  test11ExpectedImage.ppm.2.ppm  test11ExpectedImage.ppm.3.ppm  test12Expected.json  test12ExpectedImage.ppm.0.ppm  test12ExpectedImage.ppm.1.ppm  test12ExpectedImage.ppm.2.ppm  test12ExpectedImage.ppm.3.ppm  test12ExpectedTags.json  test13ExpectedTags.json  test14ExpectedImage.ppm  test14ExpectedTags.json  test14GeneratedTags.json  test15ExpectedImage.ppm  test15ExpectedTags.json  test16ExpectedImage.ppm  test1ExpectedTags.json  test1GeneratedTags.json  test2ExpectedTags.json  test3ExpectedImage.ppm  test4ExpectedImage.ppm  test5ExpectedImage.ppm  test6ExpectedImage.ppm  test7ExpectedImage.ppm  test8ExpectedImage.ppm  test9Expected.json  test9ExpectedImage.ppm  (+4 more)
patches/: arith.h
src/: abstractDcmFile.h  baseFilePyramidSource.h  bilinearinterpolationframe.cpp  bilinearinterpolationframe.h  cWrapper.cpp  cWrapper.h  compressor.h  dcmFileDraft.cpp  dcmFileDraft.h  dcmFilePyramidSource.cpp  dcmFilePyramidSource.h  dcmTags.cpp  dcmTags.h  dcmtkImgDataInfo.h  dcmtkUtils.cpp  dcmtkUtils.h  dicom_file_region_reader.cpp  dicom_file_region_reader.h  enums.h  frame.cpp  frame.h  geometryUtils.cpp  geometryUtils.h  imageFilePyramidSource.cpp  imageFilePyramidSource.h  jpeg2000Compression.cpp  jpeg2000Compression.h  jpegCompression.cpp  jpegCompression.h  jpegUtil.cpp  jpegUtil.h  main.cpp  nearestneighborframe.cpp  nearestneighborframe.h  opencvinterpolationframe.cpp  opencvinterpolationframe.h  openslideUtil.cpp  openslideUtil.h  rawCompression.cpp  rawCompression.h  (+16 more)
tests/: bilinearinterpolationframe.cpp  dcmFileDraft.cpp  dcmFilePyramidSource.cpp  dcmTags.cpp  dcmtkUtils.cpp  dicom_file_region_reader.cpp  frame.cpp  geometryUtils.cpp  imageFilePyramidSource.cpp  jpeg.dicom  jpeg2000.dicom  jpegUtil.cpp  nearestneighborframe.cpp  opencvinterpolationframe.cpp  raw.dicom  testDateTags.json  testUtils.cpp  testUtils.h  test_frame.cpp  test_frame.h  tests.cpp  tiffDirectory.cpp  tiffFile.cpp  tiffFrame.cpp  tiffTile.cpp  wsiToDcm.cpp  zlibWrapper.cpp
